--- a/index.html
+++ b/index.html
@@ -15,7 +15,32 @@
 </head>
 <body>
     <header>
-        <div class="navegacion">
+        <nav class="navbar navbar-expand-lg navbar-light bg-none">
+            <a class="navbar-brand" href="index.html">Cine<span class="color">Matrix</span></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="./paginas/horarios.html">Horarios<span class="sr-only"></span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./paginas/combos.html">Combos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./paginas/precios.html">Precios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./paginas/proximos-estrenos.html">Proximos Estrenos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./paginas/precios.html">Contacto</a>
+                    </li>
+                </ul>
+                </div>
+            </nav>
+        <!--<div class="navegacion">
             <a class="logo" href="index.html">
             <h1 class="logo__nombre">Cine<span class="color">Matrix</span></h1>
             </a>
@@ -29,7 +54,7 @@
                     <li><a class="indice" href="paginas/contacto.html">Contacto</a></li>
                 </ul>
             </nav>
-        </div>
+        </div>-->
     </header>
 
     <div class="seleccion">
@@ -105,17 +130,6 @@
             </button>
         </div>
 
-        <!--<div class="slider__imagenes">
-            <img class="slider__img" id="slider1" src="imagenes/titanic.jpg" alt="titanic">
-            <img class="slider__img" id="slider2" src="imagenes/seven.jpg" alt="seven">
-            <img class="slider__img" id="slider3" src="imagenes/mujer-bonita.jpg" alt="pretty woman">
-            <img class="slider__img" id="slider4" src="imagenes/matrix.jpg" alt="matrix">
-            <img class="slider__img" id="slider5" src="imagenes/la-momia.jpg" alt="la momia">
-            <img class="slider__img" id="slider6" src="imagenes/mi-pobre-angelito.jpg" alt="home alone">
-            <img class="slider__img" id="slider7" src="imagenes/el-guardaespaldas.jpg" alt="el guardaespaldas">
-            <img class="slider__img" id="slider8" src="imagenes/bichos.jpg" alt="bichos">
-            <img class="slider__img" id="slider9" src="imagenes/belleza-americana.jpg" alt="american beauty">
-        </div> -->
 
         <div class="cartelera">
             <p class="bloque__cartelera">PELICULAS EN CARTEL</p>
