--- a/index.html
+++ b/index.html
@@ -55,30 +55,30 @@
     <div class="seleccion">
             <div class="seleccion__peliculas">
                 <select name="pelicula" id="pelicula">
-                    <option value="titanic"> Titanic - 2D Cast</option>
-                    <option value="Sev"> Seven - 2D Cast</option>
-                    <option value="Pre"> Mujer bonita - 2D Cast</option>
-                    <option value="Mat"> Matrix - 2D Cast</option>
-                    <option value="Mom"> La Momia - 2D Cast</option>
-                    <option value="Ang"> Mi Pobre Angelito- 2D Cast</option>
-                    <option value="Gho"> Ghost - 2D Cast</option>
-                    <option value="Bic"> Bichos - 2D Cast</option>
-                    <option value="Ros"> Belleza Americana - 2D Cast</option>
+                    <option value="titanic" >Titanic - 2D Cast</option>
+                    <option value="Sev">Seven - 2D Cast</option>
+                    <option value="Pre">Mujer bonita - 2D Cast</option>
+                    <option value="Mat">Matrix - 2D Cast</option>
+                    <option value="Mom">La Momia - 2D Cast</option>
+                    <option value="Ang">Mi Pobre Angelito- 2D Cast</option>
+                    <option value="Gho">Ghost - 2D Cast</option>
+                    <option value="Bic">Bichos - 2D Cast</option>
+                    <option value="Ros">Belleza Americana - 2D Cast</option>
                 </select>
             </div>
 
         <div class="menu">
             <ul class="menu__numeros">
                 <li> 
-                    <a class="menu__numeros__2" href="#slider1">1</a>
-                    <a class="menu__numeros__2" href="#slider2">2</a>
-                    <a class="menu__numeros__2" href="#slider3">3</a>
-                    <a class="menu__numeros__2" href="#slider4">4</a>
-                    <a class="menu__numeros__2" href="#slider5">5</a>
-                    <a class="menu__numeros__2" href="#slider6">6</a>
-                    <a class="menu__numeros__2" href="#slider7">7</a>
-                    <a class="menu__numeros__2" href="#slider8">8</a>
-                    <a class="menu__numeros__2" href="#slider9">9</a>
+                    <a class="menu__numeros__2" href="#">1</a>
+                    <a class="menu__numeros__2" href="#">2</a>
+                    <a class="menu__numeros__2" href="#">3</a>
+                    <a class="menu__numeros__2" href="#">4</a>
+                    <a class="menu__numeros__2" href="#">5</a>
+                    <a class="menu__numeros__2" href="#">6</a>
+                    <a class="menu__numeros__2" href="#">7</a>
+                    <a class="menu__numeros__2" href="#">8</a>
+                    <a class="menu__numeros__2" href="#">9</a>
                 </li>
             </ul>
         </div>
@@ -88,31 +88,31 @@
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="imagenes/titanic.jpg" class="d-block w-100" alt="...">
+                    <img src="imagenes/titanic.jpg" class="d-block w-100" alt="titanic">
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/seven.jpg" class="d-block w-100" alt="...">
+                    <img src="imagenes/seven.jpg" class="d-block w-100" alt="seven">
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/mujer-bonita.jpg" class="d-block w-100" alt="...">
+                    <img src="imagenes/mujer-bonita.jpg" id="id3" class="d-block w-100" alt="mujer bonita">
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/matrix.jpg" class="d-block w-100" alt="...">
+                    <img src="imagenes/matrix.jpg" class="d-block w-100" alt="matrix">
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/la-momia.jpg" class="d-block w-100" alt="...">
+                    <img src="imagenes/la-momia.jpg" class="d-block w-100" alt="la momia">
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/mi-pobre-angelito.jpg" class="d-block w-100" alt="...">
+                    <img src="imagenes/mi-pobre-angelito.jpg" class="d-block w-100" alt="mi pobre angelito">
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/el-guardaespaldas.jpg" class="d-block w-100" alt="...">
+                    <img src="imagenes/el-guardaespaldas.jpg" class="d-block w-100" alt="el guardaespaldas">
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/bichos.jpg" class="d-block w-100" alt="...">
+                    <img src="imagenes/bichos.jpg" class="d-block w-100" alt="bichos">
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/belleza-americana.jpg" class="d-block w-100" alt="...">
+                    <img src="imagenes/belleza-americana.jpg" class="d-block w-100" alt="belleza americana">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -147,7 +147,7 @@
                         <li class="subtitulo">Nacionalidad:</li>
                         <li>Estados Unidos</li>
                         <li class="subtitulo">Calificacion:</li>
-                        <li>Apta para mayores de 16 anos</li>
+                        <li>Apta para mayores de 16 años</li>
                         <li class="subtitulo">Duracion:</li>
                         <li>108 MIN</li>
                         <li class="subtitulo">Distribuidora:</li>
@@ -184,7 +184,7 @@
                     <li class="subtitulo">Nacionalidad:</li>
                     <li>Estados Unidos</li>
                     <li class="subtitulo">Calificacion:</li>
-                    <li>Apta para mayores de 16 anos</li>
+                    <li>Apta para mayores de 16 años</li>
                     <li class="subtitulo">Duracion:</li>
                     <li>108 MIN</li>
                     <li class="subtitulo">Distribuidora:</li>
@@ -220,7 +220,7 @@
                     <li class="subtitulo">Nacionalidad:</li>
                     <li>Estados Unidos</li>
                     <li class="subtitulo">Calificacion:</li>
-                    <li>Apta para mayores de 16 anos</li>
+                    <li>Apta para mayores de 16 años</li>
                     <li class="subtitulo">Duracion:</li>
                     <li>108 MIN</li>
                     <li class="subtitulo">Distribuidora:</li>
@@ -236,7 +236,7 @@
 
             <div class="video">
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/DvPEFrTBu_0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>                </div>
-            </section>
+        </section>
 
 
         <!--MATRIX-->
@@ -255,7 +255,7 @@
                     <li class="subtitulo">Nacionalidad:</li>
                     <li>Estados Unidos</li>
                     <li class="subtitulo">Calificacion:</li>
-                    <li>Apta para mayores de 16 anos</li>
+                    <li>Apta para mayores de 16 años</li>
                     <li class="subtitulo">Duracion:</li>
                     <li>108 MIN</li>
                     <li class="subtitulo">Distribuidora:</li>
@@ -288,7 +288,7 @@
                     <li class="subtitulo">Nacionalidad:</li>
                     <li>Estados Unidos</li>
                     <li class="subtitulo">Calificacion:</li>
-                    <li>Apta para mayores de 16 anos</li>
+                    <li>Apta para mayores de 16 años</li>
                     <li class="subtitulo">Duracion:</li>
                     <li>108 MIN</li>
                     <li class="subtitulo">Distribuidora:</li>
@@ -321,7 +321,7 @@
                     <li class="subtitulo">Nacionalidad:</li>
                     <li>Estados Unidos</li>
                     <li class="subtitulo">Calificacion:</li>
-                    <li>Apta para mayores de 16 anos</li>
+                    <li>Apta para mayores de 16 años</li>
                     <li class="subtitulo">Duracion:</li>
                     <li>108 MIN</li>
                     <li class="subtitulo">Distribuidora:</li>
@@ -355,7 +355,7 @@
                     <li class="subtitulo">Nacionalidad:</li>
                     <li>Estados Unidos</li>
                     <li class="subtitulo">Calificacion:</li>
-                    <li>Apta para mayores de 16 anos</li>
+                    <li>Apta para mayores de 16 años</li>
                     <li class="subtitulo">Duracion:</li>
                     <li>108 MIN</li>
                     <li class="subtitulo">Distribuidora:</li>
@@ -389,7 +389,7 @@
                     <li class="subtitulo">Nacionalidad:</li>
                     <li>Estados Unidos</li>
                     <li class="subtitulo">Calificacion:</li>
-                    <li>Apta para mayores de 16 anos</li>
+                    <li>Apta para mayores de 16 años</li>
                     <li class="subtitulo">Duracion:</li>
                     <li>108 MIN</li>
                     <li class="subtitulo">Distribuidora:</li>
@@ -423,7 +423,7 @@
                     <li class="subtitulo">Nacionalidad:</li>
                     <li>Estados Unidos</li>
                     <li class="subtitulo">Calificacion:</li>
-                    <li>Apta para mayores de 16 anos</li>
+                    <li>Apta para mayores de 16 años</li>
                     <li class="subtitulo">Duracion:</li>
                     <li>108 MIN</li>
                     <li class="subtitulo">Distribuidora:</li>
