--- a/paginas/proximos-estrenos.html
+++ b/paginas/proximos-estrenos.html
@@ -70,15 +70,15 @@
         <div class="menu">
             <ul class="menu__numeros">
                 <li>
-                    <a class="menu__numeros__2" href="#slider1">1</a>
-                    <a class="menu__numeros__2" href="#slider2">2</a>
-                    <a class="menu__numeros__2" href="#slider3">3</a>
-                    <a class="menu__numeros__2" href="#slider4">4</a>
-                    <a class="menu__numeros__2" href="#slider5">5</a>
-                    <a class="menu__numeros__2" href="#slider6">6</a>
-                    <a class="menu__numeros__2" href="#slider7">7</a>
-                    <a class="menu__numeros__2" href="#slider8">8</a>
-                    <a class="menu__numeros__2" href="#slider9">9</a>
+                    <a class="menu__numeros__2" href="#">1</a>
+                    <a class="menu__numeros__2" href="#">2</a>
+                    <a class="menu__numeros__2" href="#">3</a>
+                    <a class="menu__numeros__2" href="#">4</a>
+                    <a class="menu__numeros__2" href="#">5</a>
+                    <a class="menu__numeros__2" href="#">6</a>
+                    <a class="menu__numeros__2" href="#">7</a>
+                    <a class="menu__numeros__2" href="#">8</a>
+                    <a class="menu__numeros__2" href="#">9</a>
                 </li>
             </ul>
         </div>
@@ -88,31 +88,31 @@
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../imagenes/joven-manos-de-tijeras.jpeg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/joven-manos-de-tijeras.jpeg" class="d-block w-100" alt="el joven manos de tijeras">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/mejores_peliculas_anos_noventa_la_bella_y_la_bestia.jpeg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/mejores_peliculas_anos_noventa_la_bella_y_la_bestia.jpeg" class="d-block w-100" alt="la bella y la bestia">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/forest-gump.jpeg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/forest-gump.jpeg" class="d-block w-100" alt="forest gump">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/el-rey-leon.jpeg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/el-rey-leon.jpeg" class="d-block w-100" alt="el rey leon">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/antes-del-amanecer.jpeg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/antes-del-amanecer.jpeg" class="d-block w-100" alt="antes del amanecer">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/clueless.jpeg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/clueless.jpeg" class="d-block w-100" alt="clueless">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/scream.jpeg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/scream.jpeg" class="d-block w-100" alt="scream">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/el-show-de-truman.jpeg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/el-show-de-truman.jpeg" class="d-block w-100" alt="el show de truman">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/sexto-sentido.jpeg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/sexto-sentido.jpeg" class="d-block w-100" alt="sexto sentdo">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
