--- a/paginas/precios.html
+++ b/paginas/precios.html
@@ -71,15 +71,15 @@
         <div class="menu">
             <ul class="menu__numeros">
                 <li>
-                    <a class="menu__numeros__2" href="#slider1">1</a>
-                    <a class="menu__numeros__2" href="#slider2">2</a>
-                    <a class="menu__numeros__2" href="#slider3">3</a>
-                    <a class="menu__numeros__2" href="#slider4">4</a>
-                    <a class="menu__numeros__2" href="#slider5">5</a>
-                    <a class="menu__numeros__2" href="#slider6">6</a>
-                    <a class="menu__numeros__2" href="#slider7">7</a>
-                    <a class="menu__numeros__2" href="#slider8">8</a>
-                    <a class="menu__numeros__2" href="#slider9">9</a>
+                    <a class="menu__numeros__2" href="#">1</a>
+                    <a class="menu__numeros__2" href="#">2</a>
+                    <a class="menu__numeros__2" href="#">3</a>
+                    <a class="menu__numeros__2" href="#">4</a>
+                    <a class="menu__numeros__2" href="#">5</a>
+                    <a class="menu__numeros__2" href="#">6</a>
+                    <a class="menu__numeros__2" href="#">7</a>
+                    <a class="menu__numeros__2" href="#">8</a>
+                    <a class="menu__numeros__2" href="#">9</a>
                 </li>
             </ul>
         </div>
@@ -89,31 +89,31 @@
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../imagenes/titanic.jpg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/titanic.jpg" class="d-block w-100" alt="titanic">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/seven.jpg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/seven.jpg" class="d-block w-100" alt="seven">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/mujer-bonita.jpg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/mujer-bonita.jpg" class="d-block w-100" alt="mujer bonita">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/matrix.jpg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/matrix.jpg" class="d-block w-100" alt="matrix">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/la-momia.jpg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/la-momia.jpg" class="d-block w-100" alt="la momia">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/mi-pobre-angelito.jpg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/mi-pobre-angelito.jpg" class="d-block w-100" alt="mi pobre angelito">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/el-guardaespaldas.jpg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/el-guardaespaldas.jpg" class="d-block w-100" alt="el guardaespaldas">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/bichos.jpg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/bichos.jpg" class="d-block w-100" alt="bichos">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/belleza-americana.jpg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/belleza-americana.jpg" class="d-block w-100" alt="belleza americana">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
