modificaciones de imagenes

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <header>
+        <!--MENU DE NAVEGACION-->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand navbar__logo" href="index.html"><span class=color__1>Cine</span><span class="color__2">Matrix</span></a>
@@ -52,6 +53,7 @@
         </nav>
     </header>
 
+    <!--SELECTOR DE PELICULAS DISABLED-->
     <div class="seleccion">
             <div class="seleccion__peliculas">
                 <select name="pelicula" id="pelicula">
@@ -84,7 +86,8 @@
         </div>
     </div>
 
-    <div class="caja">
+    <main class="caja">
+        <!--CAROUSEL-->
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -130,7 +133,7 @@
             <p class="bloque__cartelera">PELICULAS EN CARTEL</p>
         </div> 
 
-        <!--INICIO TITANIC-->
+        <!--TITANIC-->
         <section class="contenedorTotal">
                 <div class="img-1">
                     <img class="imagen__1" src="imagenes/titanicsinopsis.jpeg" alt="titanic sinopsis">
@@ -441,7 +444,9 @@
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/GqXz2NeSpY8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
-    </div>
+    </main>
+
+    <!--FOOTER-->
     <footer>
         <div class="footer">
             <nav>
