--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -15,6 +15,7 @@
 
 <body>
     <header>
+        <!--MENU DE NAVEGACION-->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand navbar__logo" href="../index.html"><span class=color__1>Cine</span><span class="color__2">Matrix</span></a>
@@ -53,6 +54,7 @@
         </nav>
     </header>
 
+    <!--SELECTOR DE PELICULAS DISABLED-->
     <div class="seleccion">
         <div class="seleccion__peliculas">
             <select name="pelicula" id="pelicula">
@@ -85,7 +87,8 @@
         </div>
     </div>
 
-    <div class="caja">
+    <main class="caja">
+        <!--CAROUSEL-->
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -130,6 +133,7 @@
             <p class="bloque__contacto">CONTACTO</p>
         </div>
 
+        <!--NAVEGACION CONSULTAS-->
         <p class="parrafo-consultas">¿Consultas? Hace Click acá</p>
         <section class="contacto">
             <div class=" consultas">
@@ -148,6 +152,7 @@
                 </table>
             </div>
 
+            <!--FORMULARIO DE CONTACTO-->
                 <form>
                     <ul>
                         <li><label for="nombre">Nombre</label>
@@ -174,8 +179,9 @@
                     </ul> 
                 </form>
         </section>
-    </div>
+    </main>
 
+    <!--FOOTER-->
     <footer>
         <div>
             <nav class="footer">
