--- a/paginas/horarios.html
+++ b/paginas/horarios.html
@@ -15,6 +15,7 @@
 
 <body>
   <header>
+    <!--MENU DE NAVEGACION-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
           <a class="navbar-brand navbar__logo" href="../index.html"><span class=color__1>Cine</span><span class="color__2">Matrix</span></a>
@@ -53,6 +54,7 @@
     </nav>
   </header>
 
+  <!--SELECTOR DE PELICULAS DISABLED-->
   <div class="seleccion">
         <div class="seleccion__peliculas">
             <select name="pelicula" id="pelicula">
@@ -85,7 +87,8 @@
       </div>
     </div>
 
-    <div class="caja">
+    <main class="caja">
+      <!--CAROUSEL-->
       <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -131,6 +134,7 @@
         <p class="bloque__horarios">Horarios</p>
       </div>
 
+      <!--HORARIOS-->
       <section class="horarios">
           <div class="horarios__1">
             <img class="horarios__1_img" src="../imagenes/titanicsinopsis.jpeg" alt="titanic">
@@ -177,8 +181,9 @@
             <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
           </div>
       </section>
-    </div>
+    </main>
 
+    <!--FOOTER-->
     <footer>
         <div>
           <nav class="footer">
