--- a/paginas/proximos-estrenos.html
+++ b/paginas/proximos-estrenos.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <header>
+        <!--MENU DE NAVEGACION-->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand navbar__logo" href="../index.html"><span class=color__1>Cine</span><span class="color__2">Matrix</span></a>
@@ -52,6 +53,7 @@
         </nav>
     </header>
 
+    <!--SELECTOR DE PELICULAS DISABLED-->
     <div class="seleccion">
         <div class="seleccion__peliculas">
             <select name="pelicula" id="pelicula">
@@ -84,35 +86,36 @@
         </div>
     </div>
 
-    <div class="caja">
+    <main class="caja">
+        <!--CAROUSEL-->
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../imagenes/joven-manos-de-tijeras.jpeg" class="d-block w-100" alt="el joven manos de tijeras">
+                    <img src="../imagenes/joven-manos-de-tijeras.jpeg" class="d-block w-100 h-100" alt="el joven manos de tijeras">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/mejores_peliculas_anos_noventa_la_bella_y_la_bestia.jpeg" class="d-block w-100" alt="la bella y la bestia">
+                    <img src="../imagenes/mejores_peliculas_anos_noventa_la_bella_y_la_bestia.jpeg" class="d-block w-100 h-100" alt="la bella y la bestia">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/forest-gump.jpeg" class="d-block w-100" alt="forest gump">
+                    <img src="../imagenes/forest-gump.jpeg" class="d-block w-100 h-100" alt="forest gump">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/el-rey-leon.jpeg" class="d-block w-100" alt="el rey leon">
+                    <img src="../imagenes/el-rey-leon.jpeg" class="d-block w-100 h-100" alt="el rey leon">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/antes-del-amanecer.jpeg" class="d-block w-100" alt="antes del amanecer">
+                    <img src="../imagenes/antes-del-amanecer.jpeg" class="d-block w-100 h-100" alt="antes del amanecer">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/clueless.jpeg" class="d-block w-100" alt="clueless">
+                    <img src="../imagenes/clueless.jpeg" class="d-block w-100 h-100" alt="clueless">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/scream.jpeg" class="d-block w-100" alt="scream">
+                    <img src="../imagenes/scream.jpeg" class="d-block w-100 h-100" alt="scream">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/el-show-de-truman.jpeg" class="d-block w-100" alt="el show de truman">
+                    <img src="../imagenes/el-show-de-truman.jpeg" class="d-block w-100 h-100" alt="el show de truman">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/sexto-sentido.jpeg" class="d-block w-100" alt="sexto sentdo">
+                    <img src="../imagenes/sexto-sentido.jpeg" class="d-block w-100 h-100" alt="sexto sentdo">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -125,17 +128,6 @@
             </button>
         </div>
         
-        <!--<div class="slider__imagenes">
-            <img class="slider__img1" id="slider1" src="../imagenes/joven-manos-de-tijeras.jpeg" alt="joven manos de tijeras">
-            <img class="slider__img1" id="slider2" src="../imagenes/la-bella-y-la-bestia.jpeg" alt="la bella y la bestia">
-            <img class="slider__img1" id="slider3" src="../imagenes/forest-gump.jpeg" alt="forest gump">
-            <img class="slider__img1" id="slider4" src="../imagenes/el-rey-leon.jpeg" alt="el rey leon">
-            <img class="slider__img1" id="slider5" src="../imagenes/antes-del-amanecer.jpeg" alt="antes del amanecer">
-            <img class="slider__img1" id="slider6" src="../imagenes/clueless.jpeg" alt="clueless">
-            <img class="slider__img1" id="slider7" src="../imagenes/scream.jpeg" alt="scream">
-            <img class="slider__img1" id="slider8" src="../imagenes/el-show-de-truman.jpeg" alt="el show de truman">
-            <img class="slider__img1" id="slider9" src="../imagenes/sexto-sentido.jpeg" alt="sexto sentido">
-        </div> -->
 
         <div class="cartelera">
             <p class="bloque__proximos-estrenos">PROXIMOS ESTRENOS</p>
@@ -444,8 +436,10 @@
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/3-ZP95NF_Wk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
-    </div>
+    </main>
+    
         <footer>
+            <!--FOOTER-->
             <div>
                 <nav class="footer">
                     <ul class="footer__lista">
