modifique error gramatical

--- a/paginas/proximos-estrenos.html
+++ b/paginas/proximos-estrenos.html
@@ -151,7 +151,7 @@
                     <li class="subtitulo">Nacionalidad:</li>
                     <li>Estados Unidos</li>
                     <li class="subtitulo">Calificacion:</li>
-                    <li>Apta para mayores de 16 anos</li>
+                    <li>Apta para mayores de 16 años</li>
                     <li class="subtitulo">Duracion:</li>
                     <li>108 MIN</li>
                     <li class="subtitulo">Distribuidora:</li>
@@ -221,7 +221,7 @@
                     <li class="subtitulo">Nacionalidad:</li>
                     <li>Estados Unidos</li>
                     <li class="subtitulo">Calificacion:</li>
-                    <li>Apta para mayores de 16 anos</li>
+                    <li>Apta para mayores de 16 años</li>
                     <li class="subtitulo">Duracion:</li>
                     <li>108 MIN</li>
                     <li class="subtitulo">Distribuidora:</li>
@@ -252,7 +252,7 @@
                     <li class="subtitulo">Nacionalidad:</li>
                     <li>Estados Unidos</li>
                     <li class="subtitulo">Calificacion:</li>
-                    <li>Apta para mayores de 16 anos</li>
+                    <li>Apta para mayores de 16 años</li>
                     <li class="subtitulo">Duracion:</li>
                     <li>108 MIN</li>
                     <li class="subtitulo">Distribuidora:</li>
@@ -285,7 +285,7 @@
                     <li class="subtitulo">Nacionalidad:</li>
                     <li>Estados Unidos</li>
                     <li class="subtitulo">Calificacion:</li>
-                    <li>Apta para mayores de 16 anos</li>
+                    <li>Apta para mayores de 16 años</li>
                     <li class="subtitulo">Duracion:</li>
                     <li>108 MIN</li>
                     <li class="subtitulo">Distribuidora:</li>
@@ -318,7 +318,7 @@
                     <li class="subtitulo">Nacionalidad:</li>
                     <li>Estados Unidos</li>
                     <li class="subtitulo">Calificacion:</li>
-                    <li>Apta para mayores de 16 anos</li>
+                    <li>Apta para mayores de 16 años</li>
                     <li class="subtitulo">Duracion:</li>
                     <li>108 MIN</li>
                     <li class="subtitulo">Distribuidora:</li>
@@ -351,7 +351,7 @@
                     <li class="subtitulo">Nacionalidad:</li>
                     <li>Estados Unidos</li>
                     <li class="subtitulo">Calificacion:</li>
-                    <li>Apta para mayores de 16 anos</li>
+                    <li>Apta para mayores de 16 años</li>
                     <li class="subtitulo">Duracion:</li>
                     <li>108 MIN</li>
                     <li class="subtitulo">Distribuidora:</li>
@@ -385,7 +385,7 @@
                     <li class="subtitulo">Nacionalidad:</li>
                     <li>Estados Unidos</li>
                     <li class="subtitulo">Calificacion:</li>
-                    <li>Apta para mayores de 16 anos</li>
+                    <li>Apta para mayores de 16 años</li>
                     <li class="subtitulo">Duracion:</li>
                     <li>108 MIN</li>
                     <li class="subtitulo">Distribuidora:</li>
@@ -419,7 +419,7 @@
                     <li class="subtitulo">Nacionalidad:</li>
                     <li>Estados Unidos</li>
                     <li class="subtitulo">Calificacion:</li>
-                    <li>Apta para mayores de 16 anos</li>
+                    <li>Apta para mayores de 16 años</li>
                     <li class="subtitulo">Duracion:</li>
                     <li>108 MIN</li>
                     <li class="subtitulo">Distribuidora:</li>
