--- a/paginas/proximos-estrenos.html
+++ b/paginas/proximos-estrenos.html
@@ -27,7 +27,7 @@
                             <a class="nav-link active" aria-current="page" href="../index.html"></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link navbar__link" href="../index.html">Inicio</a>
+                            <a class="nav-link navbar__link" href="../index.html">Cartelera</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link navbar__link" href="horarios.html">Horarios</a>
