--- a/paginas/horarios.html
+++ b/paginas/horarios.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/estilos.css" rel="stylesheet">
     <link rel="shortcut icon" href="../imagenes/pelicula (1).png" type="image/x-icon">
     <title>CineMatrix</title>
 </head>
@@ -178,7 +178,7 @@
 
           <div class="horarios__9">
             <img class="horarios__9_img" src="../imagenes/belleza-americana.jpeg" alt="belleza-americana">
-            <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
+            <p class="horarios__p">Martes 17 de mayo<span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
           </div>
       </section>
     </main>
