--- a/paginas/proximos-estrenos.html
+++ b/paginas/proximos-estrenos.html
@@ -91,31 +91,31 @@
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../imagenes/joven-manos-de-tijeras.jpeg" class="d-block w-100 h-100" alt="el joven manos de tijeras">
+                    <img src="../imagenes/joven-manos-de-tijeras-fotor-2023062122257.jpg" class="d-block w-100 h-100" alt="el joven manos de tijeras">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/mejores_peliculas_anos_noventa_la_bella_y_la_bestia.jpeg" class="d-block w-100 h-100" alt="la bella y la bestia">
+                    <img src="../imagenes/Copia de la-bella-y-la-bestia-fotor-20230621221023.jpg" class="d-block w-100 h-100" alt="la bella y la bestia">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/forest-gump.jpeg" class="d-block w-100 h-100" alt="forest gump">
+                    <img src="../imagenes/forest-gump-fotor-2023062122142.jpg" class="d-block w-100 h-100" alt="forest gump">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/el-rey-leon.jpeg" class="d-block w-100 h-100" alt="el rey leon">
+                    <img src="../imagenes/el-rey-leon-fotor-20230621221741.jpg" class="d-block w-100 h-100" alt="el rey leon">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/antes-del-amanecer.jpeg" class="d-block w-100 h-100" alt="antes del amanecer">
+                    <img src="../imagenes/antes-del-amanecer-fotor-20230621222027.jpg" class="d-block w-100 h-100" alt="antes del amanecer">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/clueless.jpeg" class="d-block w-100 h-100" alt="clueless">
+                    <img src="../imagenes/clueless-fotor-20230621222218.jpg" class="d-block w-100 h-100" alt="clueless">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/scream.jpeg" class="d-block w-100 h-100" alt="scream">
+                    <img src="../imagenes/scream-fotor-2023062122244.jpg" class="d-block w-100 h-100" alt="scream">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/el-show-de-truman.jpeg" class="d-block w-100 h-100" alt="el show de truman">
+                    <img src="../imagenes/el-show-de-truman-fotor-20230621222540.jpg" class="d-block w-100 h-100" alt="el show de truman">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/sexto-sentido.jpeg" class="d-block w-100 h-100" alt="sexto sentdo">
+                    <img src="../imagenes/sexto-sentido-fotor-20230621222716.jpg" class="d-block w-100 h-100" alt="sexto sentdo">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -160,7 +160,7 @@
             </div>
 
             <div class="sinopsis">   
-                <p><span class="titulo__pelicula">JOVEN MANOS DE TIJERAS</span></p>
+                <p><span class="titulo__pelicula">EL JOVEN MANOS DE TIJERAS</span></p>
                 <p>Estupenda fábula con mucho de cuento de hadas sobre un ser (Johnny Depp) creado por un viejo inventor que muere antes de cambiarle las tijeras por manos humanas. El joven es "adoptado" por una vendedora de Avon (Dianne Wiest), quien lo lleva a vivir a un típico suburbio americano.</p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
